--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">SpotifyStreamer</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Spotify Streamer</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_top_ten_tracks">TopTenTracksActivity</string>
+    <string name="title_activity_top_ten_tracks">Top 10 Tracks</string>
 </resources>
